Cambiado "Regular" por "Fijo" en el desplegable

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- Contract Selector -->
         <select id="contractSelector" onchange="fetchAndDisplayData()">
             <option value="" selected disabled>SELECCIONA TU CONTRATO</option>
-            <option value="Regular">Regular</option>
+            <option value="Regular">Fijo</option>
             <option value="Fijo Discontinuo">Fijo Discontinuo</option>
         </select>
 
